[gd_scene load_steps=14 format=3 uid="uid://t32ih55th785"]

[ext_resource type="Script" path="res://Scenes/player.gd" id="1_afxvm"]
[ext_resource type="Texture2D" uid="uid://ch352mov840uj" path="res://Resources/leftHand.svg" id="2_yrgaw"]
[ext_resource type="Texture2D" uid="uid://ir5jxpf7yslc" path="res://Resources/mainCharacterWalk.png" id="4_wlgmj"]
[ext_resource type="Texture2D" uid="uid://cvyb531id882n" path="res://Resources/LightOverlay.png" id="37_di3nk"]
[ext_resource type="Texture2D" uid="uid://bqnoe5swurok4" path="res://Resources/rightHand.svg" id="74_xmldw"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_ybvd1"]
polygon = PackedVector2Array(229.859, -240.119, 49, -1, 49, 1, 49, 4, 49, 7, 47, 15, 46, 17, 42, 27, 37.3054, 32.4321, 37.6557, 37.5191, 142.8, 191.277, 45, 26, 48, 17, 50, 10)

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_y0exb"]

[sub_resource type="Animation" id="Animation_xfncx"]
resource_name = "Jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/CharacterSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.218, 0.205), Vector2(0.218, 0.194), Vector2(0.218, 0.175), Vector2(0.218, 0.151), Vector2(0.218, 0.168), Vector2(0.218, 0.179), Vector2(0.218, 0.19), Vector2(0.218, 0.204), Vector2(0.218, 0.216), Vector2(0.218, 0.228), Vector2(0.218, 0.238)]
}

[sub_resource type="Animation" id="Animation_g8lif"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/CharacterSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.218, 0.205)]
}

[sub_resource type="Animation" id="Animation_07cku"]
resource_name = "Walk"
length = 3.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/CharacterSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33]
}

[sub_resource type="Animation" id="Animation_6p2lv"]
resource_name = "falling"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/CharacterSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.218, 0.228), Vector2(0.218, 0.228)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_03s3o"]
_data = {
"Jump": SubResource("Animation_xfncx"),
"RESET": SubResource("Animation_g8lif"),
"Walk": SubResource("Animation_07cku"),
"falling": SubResource("Animation_6p2lv")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mys50"]
radius = 48.0
height = 132.0

[node name="Player" type="CharacterBody2D"]
z_index = -200
collision_layer = 4
collision_mask = 7
floor_stop_on_slope = false
floor_constant_speed = true
floor_max_angle = 1.5708
floor_snap_length = 32.0
script = ExtResource("1_afxvm")

[node name="playerCamera" type="Camera2D" parent="."]
offset = Vector2(100, -200)
zoom = Vector2(0.6, 0.6)
limit_left = 900
position_smoothing_enabled = true
metadata/_edit_group_ = true

[node name="Pivot" type="Marker2D" parent="."]
position = Vector2(1, 0)

[node name="EYE" type="PointLight2D" parent="Pivot"]
light_mask = 7
visibility_layer = 3
z_index = 10
position = Vector2(33, 0)
color = Color(0.917647, 0.905882, 0.694118, 1)
energy = 2.0
texture = ExtResource("37_di3nk")
texture_scale = 0.3

[node name="LeftHand" type="Sprite2D" parent="Pivot"]
light_mask = 2
position = Vector2(27, -3)
scale = Vector2(0.12, 0.12)
texture = ExtResource("2_yrgaw")
offset = Vector2(200, 100)
metadata/_edit_lock_ = true

[node name="CharacterSprite" type="Sprite2D" parent="Pivot"]
light_mask = 7
position = Vector2(3.77, 4.405)
scale = Vector2(0.218, 0.205)
texture = ExtResource("4_wlgmj")
hframes = 6
vframes = 6
metadata/_edit_lock_ = true

[node name="RightHand" type="Sprite2D" parent="Pivot"]
light_mask = 2
visibility_layer = 3
position = Vector2(-19, 12)
scale = Vector2(0.15, 0.15)
texture = ExtResource("74_xmldw")
offset = Vector2(200, 100)
metadata/_edit_lock_ = true

[node name="mainLight" type="PointLight2D" parent="Pivot"]
position = Vector2(69, 11)
energy = 1.3
shadow_enabled = true
shadow_filter = 2
shadow_filter_smooth = 4.5
texture = ExtResource("37_di3nk")
texture_scale = 3.0

[node name="LightOccluder2D" type="LightOccluder2D" parent="Pivot"]
position = Vector2(1.84244, -0.378621)
rotation = -0.128634
occluder = SubResource("OccluderPolygon2D_ybvd1")

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_y0exb")
anim_player = NodePath("../AnimationPlayer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "falling"
libraries = {
"": SubResource("AnimationLibrary_03s3o")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1, 0)
shape = SubResource("CapsuleShape2D_mys50")
